add templates and working on instrus

--- a/em_template.html
+++ b/em_template.html
@@ -18,7 +18,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
 
-  <title>Gconfig</title>
+  <title>Your Project</title>
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -39,8 +39,8 @@
   <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working --> 
 
   <!-- Meta -->
-  <meta content="gconfig" property="og:title">
-  <meta content="gconfig" name="description">
+  <meta content="Your Project" property="og:title">
+  <meta content="Your Project description goes here." name="description">
 
  <!-- HIGHLIGHT.JS -->
  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
@@ -54,7 +54,7 @@
  <!-- Initializer -->
 <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('Anaibi/gconfig'),
+      fetcher: Flatdoc.github('USER/REPO'),
       highlight: function() {
         return hljs.initHighlightingOnLoad();
       }
@@ -66,16 +66,16 @@
 
   <div id="main-header" class="header fixed top0 fullwidth">
     <div class="left">
-      <h1>Gconfig</h1>
+      <h1>Your Project</h1>
       <ul>  
-        <li><a href="https://github.com/Anaibi/gconfig">View on GitHub</a></li>
-        <li><a href="https://github.com/Anaibi/gconfig/issues">Issues</a></li>
+        <li><a href="https://github.com/USER/REPO">View on GitHub</a></li>
+        <li><a href="https://github.com/USER/REPO/issues">Issues</a></li>
       </ul>
     </div>
     <div class='right'>
       <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=Anaibi&amp;type=follow&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20"></iframe> 
-      <iframe src="http://ghbtns.com/github-btn.html?user=Anaibi&amp;repo=gconfig&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=USER&amp;type=follow&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20"></iframe> 
+      <iframe src="http://ghbtns.com/github-btn.html?user=USER&amp;repo=REPO&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
   <div id="fixed-header-aux"></div>
