--- a/template.html
+++ b/template.html
@@ -14,54 +14,93 @@
 -->
 <html>
 <head>
-  <meta charset='utf-8'>
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
 
-  <title>Enjoy-Mondays</title>
+  <title>Gconfig</title>
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js'></script>
-  <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js'></script>
-
+  
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
+  <!-- testing content return localhost -->
+  <!--script src="legacy.js"></script-->
+ 
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
+  <!-- testing content return localhost -->
+  <!--script src="flatdoc_2.js"></script--> 
+  
   <!-- Flatdoc theme -->
-  <link  href='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css' rel='stylesheet'>
-  <script src='https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js'></script>
+  <link  href="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css" rel="stylesheet">
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js"></script>
+
+  <!-- Enjoy-Mondays theme --> 
+  <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working --> 
 
   <!-- Meta -->
-  <meta content="gpub" property="og:title">
-  <meta content="gpub" name="description">
+  <meta content="gconfig" property="og:title">
+  <meta content="gconfig" name="description">
 
-  <!-- Initializer -->
-  <script>
+ <!-- HIGHLIGHT.JS -->
+ <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
+ <!-- testing content return localhost -->
+ <!--link rel="stylesheet" href="zenburn.css"></script-->
+ 
+ <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
+ <!-- testing content return localhost -->
+ <!--script src="highlight.pack.js"></script-->
+
+ <!-- Initializer -->
+<script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('goliatone/gpub')
+      fetcher: Flatdoc.github('USER/REPO'),
+      highlight: function() {
+        return hljs.initHighlightingOnLoad();
+      }
     });
-  </script>
-</head>
-<body role='flatdoc'>
+</script>
 
-  <div class='header'>
-    <div class='left'>
+</head>
+<body role="flatdoc" id="enjoy-mondays" class="large-brief big-h3">
+
+  <div id="main-header" class="header fixed top0 fullwidth">
+    <div class="left">
       <h1>Gpub</h1>
       <ul>  
-        <li><a href='https://github.com/goliatone/gpub'>View on GitHub</a></li>
-        <li><a href='https://github.com/goliatone/gpub/issues'>Issues</a></li>
+        <li><a href="https://github.com/USER/REPO">View on GitHub</a></li>
+        <li><a href="https://github.com/USER/REPO/issues">Issues</a></li>
       </ul>
     </div>
     <div class='right'>
       <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=goliatone&amp;repo=gpub&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=USER&amp;type=follow&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20"></iframe> 
+      <iframe src="http://ghbtns.com/github-btn.html?user=USER&amp;repo=REPO&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
-
-  <div class='content-root'>
-    <div class='menubar'>
-      <div class='menu section' role='flatdoc-menu'></div>
+  <div id="fixed-header-aux"></div>
+  <div class="content-root">
+    <div class="menubar topHeader">
+      <div class="menu section" role="flatdoc-menu"></div>
     </div>
-    <div role='flatdoc-content' class='content'></div>
+    <div role="flatdoc-content" class="content"></div>
   </div>
+    <!-- GOOGLE FONTS -->
+    <script type="text/javascript">
+      WebFontConfig = {
+          google: { families: [ 'Lato:400,100,700,900:latin','Dosis: 600:latin' ] }
+        };
+        (function() {
+          var wf = document.createElement('script');
+          wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+              '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+          wf.type = 'text/javascript';
+          wf.async = 'true';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(wf, s);
+        })(); 
+      </script>
 
 </body>
 </html>
+
