add main.js for background 2nd column fix

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
   <!-- Enjoy-Mondays theme --> 
   <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working --> 
+  
+  <!-- Enjoy-Mondays script --> 
+  <script  src="main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
 
   <!-- Meta -->
   <meta content="gconfig" property="og:title">
