add logo footer

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   <div class="content-root">
     <div class="menubar topHeader">
       <div class="menu section" role="flatdoc-menu"></div>
+      <div id="logo-footer" class="logo"><img src="smile.png" title="Enjoy Mondays" alt="Enjoy Mondays"></div>
     </div>
     <div role="flatdoc-content" class="content"></div>
   </div>
