--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
+  <!--script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
   <!-- testing content return localhost -->
-  <!--script src="legacy.js"></script-->
+  <script src="legacy.js"></script>
  
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
+  <!--script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
   <!-- testing content return localhost -->
-  <!--script src="flatdoc_2.js"></script--> 
+  <script src="flatdoc_2.js"></script> 
   
   <!-- Flatdoc theme -->
   <link  href="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css" rel="stylesheet">
@@ -46,13 +46,13 @@
   <meta content="gconfig" name="description">
 
   <!-- HIGHLIGHT.JS -->
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
+  <!--link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
   <!-- testing content return localhost -->
-  <!--link rel="stylesheet" href="zenburn.css"></script-->
+  <link rel="stylesheet" href="zenburn.css"></script>
  
-  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
+  <!--script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
   <!-- testing content return localhost -->
-  <!--script src="highlight.pack.js"></script-->
+  <script src="highlight.pack.js"></script>
 
   <!-- Initializer -->
   <script>
