--- a/em_template.html
+++ b/em_template.html
@@ -24,11 +24,11 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
-  <!-- testing content return localhost -->
+ <!-- for localhost testing -->
   <!--script src="legacy.js"></script-->
  
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
-  <!-- testing content return localhost -->
+  <!-- for localhost testing -->
   <!--script src="flatdoc_2.js"></script--> 
   
   <!-- Flatdoc theme -->
@@ -42,24 +42,24 @@
   <meta content="Your Project" property="og:title">
   <meta content="Your Project description goes here." name="description">
 
- <!-- HIGHLIGHT.JS -->
- <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
- <!-- testing content return localhost -->
- <!--link rel="stylesheet" href="zenburn.css"></script-->
+  <!-- HIGHLIGHT.JS -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
+  <!-- for localhost testing -->
+  <!--link rel="stylesheet" href="zenburn.css"></script-->
  
- <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
- <!-- testing content return localhost -->
- <!--script src="highlight.pack.js"></script-->
+  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
+  <!-- for localhost testing -->
+  <!--script src="highlight.pack.js"></script-->
 
- <!-- Initializer -->
-<script>
+  <!-- Initializer -->
+  <script>
     Flatdoc.run({
       fetcher: Flatdoc.github('USER/REPO'),
       highlight: function() {
         return hljs.initHighlightingOnLoad();
       }
     });
-</script>
+  </script>
 
 </head>
 <body role="flatdoc" id="enjoy-mondays" class="large-brief big-h3">
@@ -82,24 +82,25 @@
   <div class="content-root">
     <div class="menubar topHeader">
       <div class="menu section" role="flatdoc-menu"></div>
+      <div id="logo-footer" class="logo"><img src="smile.png" title="Enjoy Mondays" alt="Enjoy Mondays"></div>
     </div>
     <div role="flatdoc-content" class="content"></div>
   </div>
-    <!-- GOOGLE FONTS -->
-    <script type="text/javascript">
-      WebFontConfig = {
-          google: { families: [ 'Lato:400,100,700,900:latin','Dosis: 600:latin' ] }
-        };
-        (function() {
-          var wf = document.createElement('script');
-          wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+  <!-- GOOGLE FONTS -->
+  <script type="text/javascript">
+    WebFontConfig = {
+      google: { families: [ 'Lato:400,100,700,900:latin','Dosis: 600:latin' ] }
+    };
+    (function() {
+      var wf = document.createElement('script');
+      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
               '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-          wf.type = 'text/javascript';
-          wf.async = 'true';
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(wf, s);
-        })(); 
-      </script>
+      wf.type = 'text/javascript';
+      wf.async = 'true';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(wf, s);
+    })(); 
+  </script>
 
 </body>
 </html>
