add enjoy-mondays.csscall in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js"></script>
 
   <!-- Enjoy-Mondays theme --> 
-  <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working --> 
+  <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working -->
+
+  <!-- color swap test --> 
+  <link  href="enjoy-mondays.css" rel="stylesheet"> 
   
   <!-- Enjoy-Mondays script --> 
   <script  src="main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
