add background_1.css and sass, making a mess of files, clean up later

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working -->
 
   <!-- color swap test --> 
-  <link  href="enjoy-mondays.css" rel="stylesheet"> 
+  <link  href="background_1.css" rel="stylesheet"> 
   
   <!-- Enjoy-Mondays script --> 
   <script  src="main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
