color swapper add, testing

--- a/index.html
+++ b/index.html
@@ -24,13 +24,18 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
-  <!-- for localhost testing -->
-  <!--script src="legacy.js"></script-->
- 
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
-  <!-- for localhost testing -->
-  <!--script src="flatdoc_2.js"></script--> 
+  <!--
+   --><!-- for localhost testing 
+  <script src="legacy.js"></script>
+  -->
   
+  
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
+  <!--
+   --><!-- for localhost testing 
+  <script src="flatdoc_2.js"></script> 
+  -->
+
   <!-- Flatdoc theme -->
   <link  href="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css" rel="stylesheet">
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js"></script>
@@ -50,13 +55,17 @@
 
   <!-- HIGHLIGHT.JS -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
-  <!-- for localhost testing -->
-  <!--link rel="stylesheet" href="zenburn.css"></script-->
- 
-  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
-  <!-- for localhost testing -->
-  <!--script src="highlight.pack.js"></script-->
+  <!--
+   --><!-- for localhost testing 
+  <link rel="stylesheet" href="zenburn.css"></script>
+  -->
 
+  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
+  <!--
+   --><!-- for localhost testing 
+  <script src="highlight.pack.js"></script>
+  -->
+  
   <!-- Initializer-->
   <script>
     Flatdoc.run({
@@ -72,6 +81,23 @@
 
   <div id="main-header" class="header fixed top0 fullwidth">
     <div class="left">
+      <div id="color-swapper" class="fixed top0">
+        <table>
+          <thead>color swapper</thead>
+          <tbody>
+            <tr>
+              <td class="GRAY"><a html="#" title="gray #4A4A4A"></a></td>
+              <td class="LIGHT_GRAY"><a html="#" title="light gray #E9E8E3"></a></td>
+              <td class="DARK_GRAY"><a html="#" title="dark gray #3A3A3A"></a></td>
+              <td class="DARK_BLUE"><a html="#" title="dark blue #363B48"></a></td> 
+              <td class="FUXSIA"><a html="#" title="fuxsia #DF3F54"></a></td>
+              <td class="LIGHT_FUXSIA"><a html="#" title="light fuxsia #F17C71"></a></td>
+              <td class="ZENBURN_BG"><a html="#" title="zenburn #3F3F3F"></a></td> 
+              <td class="LIGHT_WHITE"><a html="#" title="light white #F8F8F4"></a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
       <h1>Gconfig\</h1>
       <ul>  
         <li><a href="https://github.com/Anaibi/gconfig">View on GitHub</a></li>
