--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <!--
+  
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
   <!--
-   --><!-- for localhost testing -->
+   --><!-- for localhost testing --><!--
   <script src="legacy.js"></script>
   <!-- -->
   
   <!--
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
-  <!--
-   --><!-- for localhost testing -->
+  
+   --><!-- for localhost testing --><!--
   <script src="flatdoc_2.js"></script> 
   <!-- -->
 
@@ -43,8 +43,9 @@
   <!-- Enjoy-Mondays theme --> 
   <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working -->
 
-  <!-- color swap test --> 
+  <!-- color swap test --> <!--
   <link  href="background_1.css" rel="stylesheet"> 
+  <!-- -->
   
   <!-- Enjoy-Mondays script --> 
   <script  src="main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
@@ -54,15 +55,15 @@
   <meta content="gconfig" name="description">
 
   <!-- HIGHLIGHT.JS -->
-  <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
   <!--
-   --><!-- for localhost testing -->
+   --><!-- for localhost testing --><!--
   <link rel="stylesheet" href="zenburn.css"></script>
   <!-- -->
   <!--
   <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
-  <!--
-   --><!-- for localhost testing -->
+  
+   --><!-- for localhost testing --><!--
   <script src="highlight.pack.js"></script>
   <!-- -->
 
