add color swap, works local, test online and clean code

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
   <!--
-   --><!-- for localhost testing --><!--
-  <script src="legacy.js"></script>
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
+  
+  <!----><!-- for localhost testing -->
+  <script src="legacy.js"></script> 
   <!-- -->
   
   <!--
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
   
-   --><!-- for localhost testing --><!--
+   --><!-- for localhost testing -->
   <script src="flatdoc_2.js"></script> 
   <!-- -->
 
@@ -55,15 +55,15 @@
   <meta content="gconfig" name="description">
 
   <!-- HIGHLIGHT.JS -->
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
+  <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
   <!--
-   --><!-- for localhost testing --><!--
+   --><!-- for localhost testing -->
   <link rel="stylesheet" href="zenburn.css"></script>
   <!-- -->
   <!--
   <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
   
-   --><!-- for localhost testing --><!--
+   --><!-- for localhost testing -->
   <script src="highlight.pack.js"></script>
   <!-- -->
 
@@ -87,14 +87,11 @@
           <thead>color swapper</thead>
           <tbody>
             <tr>
-              <td class="GRAY"><a html="#" title="gray #4A4A4A"></a></td>
-              <td class="LIGHT_GRAY"><a html="#" title="light gray #E9E8E3"></a></td>
-              <td class="DARK_GRAY"><a html="#" title="dark gray #3A3A3A"></a></td>
-              <td class="DARK_BLUE"><a html="#" title="dark blue #363B48"></a></td> 
-              <td class="FUXSIA"><a html="#" title="fuxsia #DF3F54"></a></td>
-              <td class="LIGHT_FUXSIA"><a html="#" title="light fuxsia #F17C71"></a></td>
-              <td class="ZENBURN_BG"><a html="#" title="zenburn #3F3F3F"></a></td> 
-              <td class="LIGHT_WHITE"><a html="#" title="light white #F8F8F4"></a></td>
+              <td class="LIGHT_GRAY"><a html="#" title="light gray"></a></td>
+              <td class="DARK_GRAY"><a html="#" title="dark gray"></a></td>
+              <td class="DARK_BLUE"><a html="#" title="dark blue"></a></td>
+              <td class="FUXSIA"><a html="#" title="fuxsia"></a></td> 
+              <td class="LIGHTER_WHITE"><a html="#" title="white"></a></td> 
             </tr>
           </tbody>
         </table>
