--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js"></script>
 
   <!-- Enjoy-Mondays theme --> 
-  <link  href="SASS/style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working -->
+  <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working -->
 
   <!-- color swap test --> <!--
   <link  href="background_1.css" rel="stylesheet"> 
@@ -60,9 +60,9 @@
    --><!-- for localhost testing 
   <link rel="stylesheet" href="zenburn.css"></script>
   <!-- -->
-  
-  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
   <!--
+  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
+  
    --><!-- for localhost testing 
   <script src="highlight.pack.js"></script>
   <!-- -->
