--- a/webPackage/index.html
+++ b/webPackage/index.html
@@ -22,18 +22,18 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  
+  <!--
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
   <!--
-  --><!-- for localhost testing 
-  <script src="legacy.js"></script> 
+  --><!-- for localhost testing -->
+  <script src="localhost/legacy.js"></script> 
   <!-- -->
   
-  
+  <!--
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
   <!--
-  --><!-- for localhost testing 
-  <script src="flatdoc_2.js"></script> 
+  --><!-- for localhost testing -->
+  <script src="localhost/flatdoc_2.js"></script> 
   <!-- -->
 
   <!-- Flatdoc theme -->
@@ -48,23 +48,23 @@
   <!-- -->
   
   <!-- Enjoy-Mondays script --> 
-  <script  src="main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
+  <script  src="js/main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
 
   <!-- Meta -->
   <meta content="gconfig" property="og:title">
   <meta content="gconfig" name="description">
 
-  <!-- HIGHLIGHT.JS -->
+  <!-- HIGHLIGHT.JS --> <!--
   <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
   <!--
-   --><!-- for localhost testing
-  <link rel="stylesheet" href="zenburn.css"></script>
+   --><!-- for localhost testing-->
+  <link rel="stylesheet" href="localhost/zenburn.css"></script>
   <!-- -->
-  
+  <!--
   <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
   <!--
-   --><!-- for localhost testing 
-  <script src="highlight.pack.js"></script>
+   --><!-- for localhost testing -->
+  <script src="localhost/highlight.pack.js"></script>
   <!-- -->
 
   <!-- Initializer-->
