Index has to be in root.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,4 @@
 <!doctype html>
-<!--
-
-  Instructions:
-
-  - Save this file.
-  - Replace "USER" with your GitHub username.
-  - Replace "REPO" with your GitHub repo name.
-  - Replace "Your Project" with your project name.
-  - Upload this file (or commit to GitHub Pages).
-
-  Customize as you see fit!
-
--->
 <html>
 <head>
   <meta charset="utf-8">
@@ -22,50 +9,46 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <!--
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
-  <!--
-  --><!-- for localhost testing -->
-  <script src="localhost/legacy.js"></script> 
-  <!-- -->
   
-  <!--
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
+  <!-- for localhost testing 
+  <script src="webPackage/localhost/legacy.js"></script> 
+  -->
+  
+  
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
-  <!--
-  --><!-- for localhost testing -->
-  <script src="localhost/flatdoc_2.js"></script> 
-  <!-- -->
+  <!-- for localhost testing 
+  <script src="webPackage/localhost/flatdoc_2.js"></script> 
+  -->
 
   <!-- Flatdoc theme -->
   <link  href="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css" rel="stylesheet">
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js"></script>
 
   <!-- Enjoy-Mondays theme --> 
-  <link  href="style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working -->
+  <link  href="webPackage/css/style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working -->
 
   <!-- color swap test --> <!--
-  <link  href="background_1.css" rel="stylesheet"> 
+  <link  href="webPackage/css/background_1.css" rel="stylesheet"> 
   <!-- -->
   
   <!-- Enjoy-Mondays script --> 
-  <script  src="js/main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
+  <script  src="webPackage/js/main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
 
   <!-- Meta -->
   <meta content="gconfig" property="og:title">
   <meta content="gconfig" name="description">
 
-  <!-- HIGHLIGHT.JS --> <!--
+  <!-- HIGHLIGHT.JS -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
-  <!--
-   --><!-- for localhost testing-->
-  <link rel="stylesheet" href="localhost/zenburn.css"></script>
-  <!-- -->
-  <!--
+  <!-- for localhost testing
+  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script>
+  -->
+  
   <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
-  <!--
-   --><!-- for localhost testing -->
-  <script src="localhost/highlight.pack.js"></script>
-  <!-- -->
+  <!-- for localhost testing 
+  <script src="webPackage/localhost/highlight.pack.js"></script>
+  -->
 
   <!-- Initializer-->
   <script>
