--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js"></script>
 
   <!-- Enjoy-Mondays theme --> 
-  <link  href="webPackage/css/style.css" rel="stylesheet"><!-- check correct way reference this! any other path option wasn't working -->
+  <link  href="webPackage/css/style.css" rel="stylesheet">
 
   <!-- color swap test --> <!--
   <link  href="webPackage/css/background_1.css" rel="stylesheet"> 
   <!-- -->
   
   <!-- Enjoy-Mondays script --> 
-  <script  src="webPackage/js/main.js"></script><!-- check correct way reference this! any other path option wasn't working --> 
+  <script  src="webPackage/js/main.js"></script>
 
   <!-- Meta -->
   <meta content="gconfig" property="og:title">
@@ -95,7 +95,7 @@
   <div class="content-root">
     <div class="menubar topHeader">
       <div class="menu section" role="flatdoc-menu"></div>
-      <div id="logo-footer" class="logo"><img src="smile.png" title="Enjoy Mondays" alt="Enjoy Mondays"></div>
+      <div id="logo-footer" class="logo"><img src="webPackage/img/smile.png" title="Enjoy Mondays" alt="Enjoy Mondays"></div>
     </div>
     <div role="flatdoc-content" class="content"></div>
   </div>
