Reorganize sass. WIP.Test online to continue.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>
-  <!-- for localhost testing 
+  <!--
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script> -->
+  <!-- for localhost testing -->
   <script src="webPackage/localhost/legacy.js"></script> 
-  -->
   
-  
+  <!--
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
-  <!-- for localhost testing 
+  --> <!-- for localhost testing -->
   <script src="webPackage/localhost/flatdoc_2.js"></script> 
-  -->
+  
 
   <!-- Flatdoc theme -->
   <link  href="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css" rel="stylesheet">
@@ -31,7 +30,7 @@
 
   <!-- color swap test --> <!--
   <link  href="webPackage/css/background_1.css" rel="stylesheet"> 
-  <!-- -->
+  -->
   
   <!-- Enjoy-Mondays script --> 
   <script  src="webPackage/js/main.js"></script>
@@ -40,16 +39,15 @@
   <meta content="gconfig" property="og:title">
   <meta content="gconfig" name="description">
 
-  <!-- HIGHLIGHT.JS -->
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
-  <!-- for localhost testing
+  <!-- HIGHLIGHT.JS --> <!--
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css"> -->
+  <!-- for localhost testing -->
   <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script>
-  -->
-  
-  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
-  <!-- for localhost testing 
+
+  <!--
+  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script> -->
+  <!-- for localhost testing -->
   <script src="webPackage/localhost/highlight.pack.js"></script>
-  -->
 
   <!-- Initializer-->
   <script>
@@ -65,7 +63,7 @@
 <body role="flatdoc" id="enjoy-mondays" class="large-brief big-h3">
 
   <div id="main-header" class="header fixed top0 fullwidth">
-    <div class="left">
+    <div class="left-content">
       <div id="color-swapper" class="fixed top0">
         <table>
           <thead>color swapper</thead>
@@ -86,17 +84,17 @@
         <li><a href="https://github.com/Anaibi/gconfig/issues">Issues</a></li>
       </ul>
     </div>
-    <div class='right'>
+    <div class='right-content'>
       <!-- GitHub buttons: see http://ghbtns.com -->
       <iframe src="http://ghbtns.com/github-btn.html?user=Anaibi&amp;type=follow&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20"></iframe> 
       <iframe src="http://ghbtns.com/github-btn.html?user=Anaibi&amp;repo=gconfig&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
-  <div id="fixed-header-aux"></div>
+  <div id="fix-placeholder"></div>
   <div class="content-root">
     <div class="menubar topHeader">
       <div class="menu section" role="flatdoc-menu"></div>
-      <div id="logo-footer" class="logo"><img src="webPackage/img/smile.png" title="Enjoy Mondays" alt="Enjoy Mondays"></div>
+      <div id="logo"><img src="webPackage/img/smile.png" title="Enjoy Mondays" alt="Enjoy Mondays"></div>
     </div>
     <div role="flatdoc-content" class="content"></div>
   </div>
