--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <meta content="gconfig" name="description">
 
   <!-- HIGHLIGHT.JS --> 
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css"> -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css"> 
   <!-- for localhost testing --> <!--
-  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script> 
+  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script> -->
 
   <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script> 
   <!-- for localhost testing --> <!--
