--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script> 
+   
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script> -->
   <!-- for localhost testing --> <!--
   <script src="webPackage/localhost/legacy.js"></script> -->
   
@@ -40,12 +40,12 @@
   <meta content="gconfig" name="description">
 
   <!-- HIGHLIGHT.JS --> 
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css"> -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css"> 
   <!-- for localhost testing --> <!--
-  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script>
-  -->
+  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script> -->
   
-  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>  -->
+  
+  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>  
   <!-- for localhost testing --> <!--
   <script src="webPackage/localhost/highlight.pack.js"></script> -->
 
