--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <!--
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>  -->
-  <!-- for localhost testing --> 
-  <script src="webPackage/localhost/legacy.js"></script> 
   
-  <!--
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>  
+  <!-- for localhost testing --> <!--
+  <script src="webPackage/localhost/legacy.js"></script> -->
+  
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script> 
-  <!-- for localhost testing --> 
-  <script src="webPackage/localhost/flatdoc_2.js"></script> 
-  
+  <!-- for localhost testing --> <!--
+  <script src="webPackage/localhost/flatdoc_2.js"></script> -->
 
   <!-- Flatdoc theme -->
   <link  href="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css" rel="stylesheet">
@@ -27,10 +25,6 @@
 
   <!-- Enjoy-Mondays theme --> 
   <link  href="webPackage/css/style.css" rel="stylesheet">
-
-  <!-- color swap test --> <!--
-  <link  href="webPackage/css/background_1.css" rel="stylesheet"> 
-  -->
   
   <!-- Enjoy-Mondays script --> 
   <script  src="webPackage/js/main.js"></script>
@@ -39,15 +33,14 @@
   <meta content="gconfig" property="og:title">
   <meta content="gconfig" name="description">
 
-  <!-- HIGHLIGHT.JS --> <!--
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css"> -->
-  <!-- for localhost testing --> 
-  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script>
+  <!-- HIGHLIGHT.JS --> 
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css"> 
+  <!-- for localhost testing --> <!--
+  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script> -->
 
-  <!--
-  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>  -->
-  <!-- for localhost testing --> 
-  <script src="webPackage/localhost/highlight.pack.js"></script> 
+  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>  
+  <!-- for localhost testing --> <!--
+  <script src="webPackage/localhost/highlight.pack.js"></script> -->
 
   <!-- Initializer-->
   <script>
@@ -119,4 +112,3 @@
 
 </body>
 </html>
-
