Basic version without colorswapper widget. WIP

--- a/index.html
+++ b/index.html
@@ -10,18 +10,8 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>  
-  <!-- for localhost testing --> <!--
-  <script src="webPackage/localhost/legacy.js"></script> -->  
-  
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script> 
-  <!-- for localhost testing --> <!--
-  <script src="webPackage/localhost/flatdoc_2.js"></script> -->
-  
-  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script> 
-  <!-- for localhost testing --> <!--
-  <script src="webPackage/localhost/flatdoc_2.js"></script> -->
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>   
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>  -->
 
   <!-- Flatdoc theme -->
   <link  href="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css" rel="stylesheet">
@@ -30,21 +20,13 @@
   <!-- Enjoy-Mondays theme --> 
   <link  href="webPackage/css/style.css" rel="stylesheet">
   
-  <!-- Enjoy-Mondays script --> 
-  <script  src="webPackage/js/main.js"></script>
-
   <!-- Meta -->
   <meta content="gconfig" property="og:title">
   <meta content="gconfig" name="description">
 
-  <!-- HIGHLIGHT.JS --> 
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css"> 
-  <!-- for localhost testing --> <!--
-  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script> -->
-
+  <!-- HIGHLIGHT.JS -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
   <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>  
-  <!-- for localhost testing --> <!--
-  <script src="webPackage/localhost/highlight.pack.js"></script> -->
 
   <!-- Initializer-->
   <script>
@@ -60,28 +42,14 @@
 <body role="flatdoc" id="enjoy-mondays" class="large-brief big-h3">
 
   <div id="main-header" class="header fixed top0 fullwidth">
-    <div class="left-content">
-      <div id="color-swapper" class="fixed top0">
-        <table>
-          <thead>color swapper</thead>
-          <tbody>
-            <tr>
-              <td class="LIGHT_GRAY"><a html="#" title="light gray"></a></td>
-              <td class="DARK_GRAY"><a html="#" title="dark gray"></a></td>
-              <td class="DARK_BLUE"><a html="#" title="dark blue"></a></td>
-              <td class="FUXSIA"><a html="#" title="fuxsia"></a></td> 
-              <td class="LIGHTER_WHITE"><a html="#" title="white"></a></td> 
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="left header-nav">
       <h1>Gconfig\</h1>
       <ul>  
         <li><a href="https://github.com/Anaibi/gconfig">View on GitHub</a></li>
         <li><a href="https://github.com/Anaibi/gconfig/issues">Issues</a></li>
       </ul>
     </div>
-    <div class='right-content'>
+    <div class="right github-buttons">
       <!-- GitHub buttons: see http://ghbtns.com -->
       <iframe src="http://ghbtns.com/github-btn.html?user=Anaibi&amp;type=follow&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="20"></iframe> 
       <iframe src="http://ghbtns.com/github-btn.html?user=Anaibi&amp;repo=gconfig&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
@@ -96,7 +64,11 @@
     <div role="flatdoc-content" class="content"></div>
   </div>
   
-  <script src="webPackage/js/colorSwap.js"></script>
+
+  <!-- Enjoy-Mondays script --> 
+  <script  src="webPackage/js/main.js"></script>
+  <!-- COLOR SWAPPER (off) 
+  <script src="webPackage/js/colorSwap.js"></script>-->
 
   <!-- GOOGLE FONTS -->
   <script type="text/javascript">
