branching from basic version without colorSwapper

--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
 
   <div id="main-header" class="header fixed top0 fullwidth">
     <div class="left header-nav">
+      <div id="color-swapper" class="fixed top0">
+        <table>
+          <thead>color swapper</thead>
+          <tbody>
+            <tr>
+              <td class="LIGHT_GRAY"><a html="#" title="light gray"></a></td>
+              <td class="DARK_GRAY"><a html="#" title="dark gray"></a></td>
+              <td class="DARK_BLUE"><a html="#" title="dark blue"></a></td>
+              <td class="FUXSIA"><a html="#" title="fuxsia"></a></td> 
+              <td class="LIGHTER_WHITE"><a html="#" title="white"></a></td> 
+            </tr>
+          </tbody>
+        </table>
+      </div>
       <h1>Gconfig\</h1>
       <ul>  
         <li><a href="https://github.com/Anaibi/gconfig">View on GitHub</a></li>
