small clean up.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <body role="flatdoc" id="enjoy-mondays" class="large-brief big-h3">
 
-  <div id="main-header" class="header fixed top0 fullwidth">
+  <div id="main-header" class="header fixedTop fullwidth">
     <div class="left header-nav">
       <h1>Gconfig\</h1>
       <ul>  
