update for online version index.html..again

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="webPackage/localhost/legacy.js"></script>  
-  <script src="webPackage/localhost/flatdoc_2.js"></script>
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/legacy.js"></script>   
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/flatdoc.js"></script>
 
   <!-- Flatdoc theme -->
   <link  href="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/style.css" rel="stylesheet">
   <script src="https://cdn.rawgit.com/rstacruz/flatdoc/v0.9.0/theme-white/script.js"></script>
 
   <!-- HIGHLIGHT.JS -->
-  <link rel="stylesheet" href="webPackage/localhost/zenburn.css"></script>
-  <script src="webPackage/localhost/highlight.pack.js"></script>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/8.4/styles/zenburn.min.css">
+  <script src="//cdn.jsdelivr.net/highlight.js/8.4/highlight.min.js"></script>
 
   <!-- Enjoy-Mondays theme --> 
   <link  href="webPackage/css/style.css" rel="stylesheet">
